# subclient

./: README.md  build-cache.sh  build.sh  client.go  client_test.go  ffi.go  go.mod  go.sum  install.sh  utils.go  utils_test.go
lib/: ccapsapi.h  subapi.h
lib/ccapsapi/: Cargo.toml
lib/ccapsapi/api/: Cargo.toml
lib/ccapsapi/api/src/: api.rs  lib.rs  utils.rs
lib/ccapsapi/core/: Cargo.toml
lib/ccapsapi/core/src/: dynamic.rs  error.rs  lib.rs
lib/ccapsapi/core/src/metadata/: metadata_type.rs
lib/ccapsapi/core/src/storage/: mod.rs  storage_client.rs
lib/ccapsapi/ext/: Cargo.toml
lib/ccapsapi/ext/src/: compose.rs  extrinsic.rs  extrinsic_params.rs  lib.rs
lib/ccapsapi/scale/: Cargo.toml
lib/ccapsapi/scale/src/: lib.rs
lib/subapi/: Cargo.toml
lib/subapi/api/: Cargo.toml
lib/subapi/api/src/: api.rs  constants.rs  lib.rs
lib/subapi/core/src/: lib.rs
lib/subapi/ext/: Cargo.toml
lib/subapi/ext/src/: lib.rs
types/: common.go  constants.go  help.go  help_test.go  metadata.go  staking.go  staking_test.go  system.go  system_test.go
ws/: type.go  ws.go  ws_test.go
xxhash/: hash.go
