[package]
name = "ccapsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch="polkadot-v0.9.29", features = ["full_crypto"] }
ext = { path = "../ext", package = "ext" }
sub_decode = { path = "../core" }

libc = "0.2.112"
hex = "0.4.2"
anyhow = "1.0.53"
serde = "1.0.130"
serde_json = "1.0.68"
log = "0.4.1"

[features]
default = ["std"]
std = [
    "serde/std",
    "hex/std",
    "sp-core/std",
]
