[package]
name = "sub_decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
scale-info = { version = "2.1.2", features = ["bit-vec"] }
scale-value = "0.6.0"
scale-decode = "0.4.0"
parking_lot = "0.12.0"

tracing = "0.1.34"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
hex = "0.4.3"
anyhow = "1.0.65"

frame-metadata = "15.0.0"
sp-core = { version = "6.0.0", default-features = false  }
sp-runtime = "6.0.0"


jsonrpsee = { version = "0.15.1", features = ["async-client", "client-ws-transport"] }






[features]
default = ["std"]
std = [
    "frame-metadata/std",
    "sp-core/std",
    "sp-runtime/std",
    "codec/std",
    "serde/std",
    "hex/std",
]