[package]
name = "ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

codec = { package = 'parity-scale-codec', version = "3.1.5", default-features = false, features = ['derive'] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

sp-core = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch="polkadot-v0.9.29", features = ["full_crypto"] }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch="polkadot-v0.9.29", package = "sp-std" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", branch="polkadot-v0.9.29", package = "sp-runtime" }
pallet-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", package = "pallet-staking" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.29", package = "pallet-balances" }
mainnet-runtime = { version = "0.9.29", default-features = false, git = "https://github.com/paritytech/polkadot.git", rev = "94078b44", package = "polkadot-runtime" }

anyhow = "1.0.53"
serde = "1.0.130"
serde_json = "1.0.68"

[features]
default = ["std"]
std = [
    "codec/std",
    "hex/std",
    "serde/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "pallet-staking/std",
    "pallet-balances/std",
    "mainnet-runtime/std",
]